@@ -12,9 +12,9 @@
 ## TODO: site/hz properties combined:
 ## D = (D_hz/max(D_hz) * w_hz) + (D_site/max(D_site) * w_site) / (w_hz + w_site)
 
-## TODO: there are commonly warnings generated:
-# In max(x) : no non-missing arguments to max; returning -Inf
-# In min(x) : no non-missing arguments to min; returning Inf
+## TODO: we are suppressing warnings from daisy() when input is all NA
+##       this is fine for now, but we should figure out a better way
+
 
 ## low-level function that the user will probably not ever use directly
 # Seems to scale to 1000 profiles with 5 variables, could use optimization
@@ -123,6 +123,10 @@ pc <- function(s, vars, max_d, k, sample_interval=NA, replace_na=TRUE, add_soil_
 	## new version for computing slice-wise dissimilarities... fast! 
 	## 
 	message("Computing Dissimilarity Matrices")
+	
+	## TEMP HACK to supress warnings generated by calling daisy with all NA input
+	ow <- options('warn')
+	options(warn=-1)
 	d <- llply(depth_slice_seq, .parallel=getOption('AQP_parallel', default=FALSE), .progress=progress, .fun=function(i, su=s.unrolled) 
 	  {
 	  
@@ -137,11 +141,17 @@ pc <- function(s, vars, max_d, k, sample_interval=NA, replace_na=TRUE, add_soil_
 		## this is where we run into memory-size limitations
 		## an ff object would help here... however it can not preserve all of the information 
 		## that a list can... we would need to store these data as raw matrices
-		d.i <- daisy(sp, metric='gower')
+	  
+	  ## TODO: don't call daisy on bogus input data, temp fix: disable warnings
+	  ## if all of the input to daisy is NA, then we get warnings from min() and max()
+	  ## this happens when we set a max depth that is beyond most profiles
+	  d.i <- daisy(sp, metric='gower')
 		return(d.i)
 	  }
 	)
-
+	options(ow)
+	
+	
 	# clean-up
 	rm(s.unrolled) ; gc()	
 	
@@ -152,7 +162,10 @@ pc <- function(s, vars, max_d, k, sample_interval=NA, replace_na=TRUE, add_soil_
 	if(replace_na)
 		{
 		# replace all NA with the MAX distance between any observations
-		max.distance <- max(sapply(d, max, na.rm=TRUE))
+		# note that down deep, there may not be enough data for any pair-wise comparisons
+		# therefore, we should not attempt to calculate max() on a matrix of all NA
+		max.distance.vect <- sapply(d, function(i) if(all(is.na(i))) NA else max(i, na.rm=TRUE))
+		max.distance <- max(max.distance.vect, na.rm=TRUE)
 		
 		## note: this will not work with sample_interval set
 		# should we use a more expensive approach, that uses the soil/non_soil flag?
